--- a/examples/load.html
+++ b/examples/load.html
@@ -59,6 +59,8 @@
 					'\t- image.url:' + mushroom.image.url,
 					'\t- image.x:' + mushroom.image.x,
 					'\t- image.y:' + mushroom.image.y,
+					'\t- image.width:' + mushroom.image.width,
+					'\t- image.height:' + mushroom.image.height,
 					'\t- image.object:' + mushroom.image.object,
 					'\t- fps:' + mushroom.fps,
 					'\t- totalFrames:' + mushroom.totalFrames,
