--- a/test/runner.html
+++ b/test/runner.html
@@ -6,9 +6,16 @@
 		<link rel="stylesheet" href="../bower_components/mocha/mocha.css" />
 	</head>
 	<body>
-		<div id="mocha"></div>
+		<div id="mocha">
+			<p>
+				<a href=".">Index</a>
+			</p>
+		</div>
+		<div id="messages"></div>
+		<div id="fixtures"></div>
 		<script src="../bower_components/mocha/mocha.js"></script>
-		<script src="../bower_components/assert/assert.js"></script>
+		<script src="../bower_components/chai/chai.js"></script>
+		<script src="../dist/am.js"></script>
 		<script>mocha.setup('bdd')</script>
 		<script src="methods.js"></script>
 		<script>
