--- a/test/runner.html
+++ b/test/runner.html
@@ -11,6 +11,7 @@
 				<a href=".">Index</a>
 			</p>
 		</div>
+		<div id="sprite"></div>
 		<div id="messages"></div>
 		<div id="fixtures"></div>
 		<script src="../bower_components/mocha/mocha.js"></script>
