--- a/test/runner.html
+++ b/test/runner.html
@@ -14,6 +14,7 @@
 		<div id="sprite"></div>
 		<div id="messages"></div>
 		<div id="fixtures"></div>
+		<script src="../bower_components/cheerio/lib/cheerio.js"></script>
 		<script src="../bower_components/mocha/mocha.js"></script>
 		<script src="../bower_components/chai/chai.js"></script>
 		<script src="../dist/am.js"></script>
